@@ -1,5 +1,5 @@
 /*
- * "$Id: http.c,v 1.1.2.11 2002/01/28 00:52:23 mike Exp $"
+ * "$Id: http.c,v 1.1.2.12 2002/07/18 16:35:18 mike Exp $"
  *
  *   HTTP routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -599,10 +599,11 @@ httpSeparate(const char *uri,		/* I - Universal Resource Identifier */
 	     int        *port,		/* O - Port number to use */
              char       *resource)	/* O - Resource/filename [1024] */
 {
-  char		*ptr;				/* Pointer into string... */
-  const char	*atsign,			/* @ sign */
-		*slash;				/* Separator */
-  char		safeuri[HTTP_MAX_URI];		/* "Safe" local copy of URI */
+  char		*ptr;			/* Pointer into string... */
+  const char	*atsign,		/* @ sign */
+		*slash;			/* Separator */
+  char		safeuri[HTTP_MAX_URI];	/* "Safe" local copy of URI */
+  char		quoted;			/* Quoted character */
 
 
  /*
@@ -726,7 +727,30 @@ httpSeparate(const char *uri,		/* I - Universal Resource Identifier */
 
     for (ptr = username; uri < atsign; uri ++)
       if (ptr < (username + HTTP_MAX_URI - 1))
-	*ptr++ = *uri;
+      {
+        if (*uri == '%' && isxdigit(uri[1]) && isxdigit(uri[2]))
+	{
+	 /*
+	  * Grab a hex-encoded username and password...
+	  */
+
+          uri ++;
+	  if (isalpha(*uri))
+	    quoted = (tolower(*uri) - 'a' + 10) << 4;
+	  else
+	    quoted = (*uri - '0') << 4;
+
+          uri ++;
+	  if (isalpha(*uri))
+	    quoted |= tolower(*uri) - 'a' + 10;
+	  else
+	    quoted |= *uri - '0';
+
+          *ptr++ = quoted;
+	}
+	else
+	  *ptr++ = *uri;
+      }
 
     *ptr = '\0';
 
@@ -2074,5 +2098,5 @@ http_upgrade(http_t *http)	/* I - HTTP data */
 
 
 /*
- * End of "$Id: http.c,v 1.1.2.11 2002/01/28 00:52:23 mike Exp $".
+ * End of "$Id: http.c,v 1.1.2.12 2002/07/18 16:35:18 mike Exp $".
  */
